--- a/Test.html
+++ b/Test.html
@@ -4,6 +4,7 @@
     <title>Test for Github Mini</title>
 </head>
 <body>
-    <h12>Welcome to my Website</h12>
+    <h1>Welcome to my Website</h1> </br>
+    <img src='Switz.jpeg'/>
 </body>
 </html>
